--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 			<li><a href="index.html">Home</a></li>
 			<li><a href="negatives.html">Negatives</a></li>
 			<li><a href="#here">About</a></li>
-			<li><a href="#references.html">References</a></li>
+			<li><a href="references.html">References</a></li>
 		</ul>
 		<h1>About Me</h1>
 		<ul>
