--- a/about.html
+++ b/about.html
@@ -2,10 +2,8 @@
 <html>
 	<head>
 	<title>Collaborative Telepresence</title>
-	
-	
 	</head>
-	<body background="https://images2.minutemediacdn.com/image/upload/c_fill,g_auto,h_1248,w_2220/f_auto,q_auto,w_1100/v1555276986/shape/mentalfloss/mizu.png">
+	<body background="background.jpg">
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="negatives.html">Negatives</a></li>
