--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	
 	
 	</head>
-	<body background="https://images2.minutemediacdn.com/image/upload/c_fill,g_auto,h_1248,w_2220/f_auto,q_auto,w_1100/v1555276986/shape/mentalfloss/mizu.png">
+	<body background="background.jpg">
 		<ul>
 			<li><a href="#here">Home</a></li>
 			<li><a href="negatives.html">Negatives</a></li>
@@ -18,7 +18,7 @@
 		<br>
 		<p>Collaborative Telepresence can be seen as using technology to allow people to interact without being physically near one another</p>
 		<br>
-		<img src="http://strati.az/thumb/crop.php?type=5&filename=18591565347514090819.jpg" alt="Sample telepresence">
+		<img src="indexpic.jpg" alt="Sample telepresence">
 		<p><strong>Collaborative Telepresence</strong> is impactful in many areas namely:</p>
 		<ul>
 			<li><a href="media.html">Media/Entertainment</a></li>
