--- a/media.html
+++ b/media.html
@@ -5,7 +5,7 @@
 	
 	
 	</head>
-	<body background="https://images2.minutemediacdn.com/image/upload/c_fill,g_auto,h_1248,w_2220/f_auto,q_auto,w_1100/v1555276986/shape/mentalfloss/mizu.png">
+	<body background="background.jpg">
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="negatives.html">Negatives</a></li>
@@ -22,7 +22,7 @@
 			Live streaming is the broadcasting of real-time, live video to an audience over the internet.<br>
 			All you need to be able to live stream is an internet-enabled device, like a smart phone or tablet, and a platform to broadcast on.</p>
 		<br>
-		<img src="https://pmcvariety.files.wordpress.com/2017/12/nba-g-league-twitch-mockup1.png?w=1000&h=563&crop=1" alt="Sample telepresence">
+		<img src="mediapic.jpg" alt="Sample telepresence">
 		<p><strong>Collaborative Telepresence</strong> is impactful in many areas namely:</p>
 		<ul>
 			<li><a href="#here">Media/Entertainment</a></li>
