--- a/references.html
+++ b/references.html
@@ -5,7 +5,7 @@
 	
 	
 	</head>
-	<body background="https://images2.minutemediacdn.com/image/upload/c_fill,g_auto,h_1248,w_2220/f_auto,q_auto,w_1100/v1555276986/shape/mentalfloss/mizu.png">
+	<body background="background.jpg">
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="negatives.html">Negatives</a></li>
@@ -20,7 +20,7 @@
 			<li>Advantages and Disadvantages of Online Collaboration. (n.d.). Retrieved from https://www.eztalks.com/video-conference/advantages-and-disadvantages-of-online-collaboration.html</li>
 		</ul>
 		<br>
-		<img src="http://strati.az/thumb/crop.php?type=5&filename=18591565347514090819.jpg" alt="Sample telepresence">
+		<img src="indexpic.jpg" alt="Sample telepresence">
 		<p><strong>Collaborative Telepresence</strong> is impactful in many areas namely:</p>
 		<ul>
 			<li><a href="media.html">Media/Entertainment</a></li>
