--- a/social.html
+++ b/social.html
@@ -5,7 +5,7 @@
 	
 	
 	</head>
-	<body background="https://images2.minutemediacdn.com/image/upload/c_fill,g_auto,h_1248,w_2220/f_auto,q_auto,w_1100/v1555276986/shape/mentalfloss/mizu.png">
+	<body background="background.jpg">
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="negatives.html">Negatives</a></li>
@@ -24,7 +24,7 @@
 		With each platforms supporting the ability to have what is called stories/status so people can watch what the person is doing at that point in time.<br>
 		People can use these platforms to do live streaming with there followers and Instagram supports the ability to join into the video chat.</p>
 		<br>
-		<img src="https://thumbor.forbes.com/thumbor/960x0/https%3A%2F%2Fblogs-images.forbes.com%2Fchrisstrub%2Ffiles%2F2019%2F05%2FIMG_1785-1-1200x814.jpg" alt="Sample telepresence">
+		<img src="socialpic.jpg" alt="Sample telepresence">
 		<p><strong>Collaborative Telepresence</strong> is impactful in many areas namely:</p>
 		<ul>
 			<li><a href="media.html">Media/Entertainment</a></li>
