--- a/negatives.html
+++ b/negatives.html
@@ -17,7 +17,7 @@
 		of machinery or for apparent participation in distant events, has a number of negative connotations.<br></p>
 		<!-- https://www.eztalks.com/video-conference/advantages-and-disadvantages-of-online-collaboration.html -->
 		<ul>
-			<li>Lack of Face-To-Face Interaction</li><br>
+			<li>Lack of Physical Interaction</li><br>
 			<li>Possibility of Network Failure and Equipment Breakdown</li><br>
 			<li>Language and Cultural Differences</li><br>
 			<li>Incidences of Group Think</li>
